Another attempt to fix RPTroll's file:// URL problem with drag/drop on Linux